--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -105,43 +105,10 @@
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="W twoim kraju"/>
                 <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/dashboard_fragment_events_in_country"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp">
+                        android:layout_height="wrap_content">
                 </androidx.recyclerview.widget.RecyclerView>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="2"/>
-                <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp">
-                </androidx.recyclerview.widget.RecyclerView>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="3"/>
-                <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp">
-                </androidx.recyclerview.widget.RecyclerView>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="4"/>
-                <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp">
-                </androidx.recyclerview.widget.RecyclerView>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="5"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="6"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="7"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="8"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="9"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="10"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="11"/>
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="12"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
