--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,11 +7,14 @@
         <action android:id="@+id/action_dashboardView_to_myProfileView" app:destination="@id/myProfileView"
         />
         <action android:id="@+id/action_dashboardView_to_searchView" app:destination="@id/searchView"/>
+        <action android:id="@+id/action_dashboardView_to_eventDetailsView" app:destination="@id/eventDetailsView"/>
     </fragment>
     <fragment android:id="@+id/myProfileView" android:name="com.google.ticketo.ui.profile.MyProfileView"
               android:label="my_profile_fragment" tools:layout="@layout/my_profile_fragment"/>
     <fragment android:id="@+id/searchView" android:name="com.google.ticketo.ui.search.SearchView"
               android:label="search_fragment" tools:layout="@layout/search_fragment"/>
     <fragment android:id="@+id/eventDetailsView" android:name="com.google.ticketo.ui.event_details.EventDetailsView"
-              android:label="event_details_fragment" tools:layout="@layout/event_details_fragment"/>
+              android:label="event_details_fragment" tools:layout="@layout/event_details_fragment">
+        <argument android:name="eventId" app:argType="string"/>
+    </fragment>
 </navigation>
