--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -14,9 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <ImageView
+                android:id="@+id/event_details_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:eventPic="@{event.imageUrl}"
                 android:transitionName="event_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
