--- a/app/src/main/res/layout/item_dashboard_event.xml
+++ b/app/src/main/res/layout/item_dashboard_event.xml
@@ -22,20 +22,21 @@
                     android:background="@color/white">
 
                 <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/item_dashboard_event_image"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:eventPic="@{event.imageUrl}"
+                        android:transitionName="event_image"
                 />
 
                 <com.google.android.material.textview.MaterialTextView
                         android:text="@{event.name}"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/item_dashboard_event_image"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
