--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:background">@color/background</item>
         <item name="actionBarTheme">@style/AppBar</item>
         <item name="android:fontFamily">@font/font_family</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="AppBar">
