--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -25,18 +25,28 @@
                 app:eventPic="@{event.imageUrl}"/>
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/event_details_buy"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/buy"
+                app:backgroundTint="@color/appBar"
+                android:textColor="@color/white"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
                 app:layout_constraintStart_toStartOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="@+id/textView4"/>
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/evene_details_sell"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sell"
+                app:backgroundTint="@color/appBar"
+                android:textColor="@color/white"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"
                 app:layout_constraintEnd_toEndOf="@+id/textView5"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView5"
