--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -45,16 +45,15 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="16dp"/>
-            <ImageView
+            <ImageButton
                     android:id="@+id/event_details_favourite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:adjustViewBounds="true"
-                    android:background="@null"
-                    android:src="@drawable/ic_favourite_empty"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/favourite_button_selector"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:clickable="true"
                     android:layout_marginEnd="16dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -64,7 +63,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/buy"
-                app:backgroundTint="@color/appBar"
+                app:backgroundTint="@color/buy_sell_tint_selector"
                 android:textColor="@color/white"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"
@@ -78,7 +77,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sell"
-                app:backgroundTint="@color/appBar"
+                app:backgroundTint="@color/buy_sell_tint_selector"
                 android:textColor="@color/white"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"
@@ -160,21 +159,21 @@
                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                 android:layout_marginEnd="8dp"/>
         <TextView
+                android:id="@+id/event_details_buyers"
                 android:text="21"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:id="@+id/textView4"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/event_details_location_name"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="70dp"/>
         <TextView
+                android:id="@+id/event_details_sellers"
                 android:text="7"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:id="@+id/textView5"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/event_details_time"
                 app:layout_constraintEnd_toEndOf="parent"
