--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -68,9 +68,9 @@
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="@+id/textView4"
-                app:layout_constraintEnd_toEndOf="@+id/textView4"/>
+                app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
+                app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
+                app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"/>
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/event_details_sell"
@@ -81,10 +81,10 @@
                 android:textColor="@color/white"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView5"
-                app:layout_constraintStart_toStartOf="@+id/textView5"/>
+                app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
+                app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
+                app:layout_constraintStart_toStartOf="@+id/event_details_sellers"/>
 
         <TextView
                 android:text="@{event.name}"
