--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -178,5 +178,29 @@
                 app:layout_constraintTop_toBottomOf="@+id/event_details_time"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="70dp"/>
+        <ProgressBar
+                android:id="@+id/event_details_progress_buy"
+                style="?android:attr/progressBarStyle"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
+                app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
+                app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"
+                android:indeterminateTint="@color/primary"/>
+        <ProgressBar
+                android:id="@+id/event_details_progress_sell"
+                style="?android:attr/progressBarStyle"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
+                app:layout_constraintStart_toStartOf="@+id/event_details_sellers"
+                app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
+                android:indeterminateTint="@color/primary"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
