--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -32,7 +32,7 @@
                 android:background="@drawable/gradient_top"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent" android:id="@+id/constraintLayout">
 
             <ImageView
                     android:id="@+id/event_details_back"
@@ -58,34 +58,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.button.MaterialButton
-                android:id="@+id/event_details_buy"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="@string/buy"
-                app:backgroundTint="@color/buy_sell_tint_selector"
-                android:textColor="@color/white"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
-                app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
-                app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"/>
-
-        <com.google.android.material.button.MaterialButton
-                android:id="@+id/event_details_sell"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="@string/sell"
-                app:backgroundTint="@color/buy_sell_tint_selector"
-                android:textColor="@color/white"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
-                app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
-                app:layout_constraintStart_toStartOf="@+id/event_details_sellers"/>
-
         <TextView
                 android:text="@{event.name}"
                 android:layout_width="0dp"
@@ -98,108 +70,152 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                app:layout_constraintBottom_toBottomOf="@+id/event_details_image"
-                android:layout_marginBottom="16dp"/>
-        <ImageView
-                android:src="@drawable/ic_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:tint="@color/white"
-                android:id="@+id/imageView"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_image"/>
-        <TextView
-                android:text="@{event.location.city}"
-                tools:text="Wrocław"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/event_details_location_city"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_image"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                android:layout_marginStart="8dp"/>
-        <ImageView
-                android:src="@drawable/ic_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:tint="@color/white"
-                android:id="@+id/imageView2"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"/>
+
+        <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="24dp"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_image"/>
-        <TextView
-                android:id="@+id/event_details_date"
-                tools:text="01.01.2020"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_image"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                android:layout_marginEnd="8dp"/>
-        <TextView
-                android:text="@{event.location.name}"
-                tools:text="Akademia Club"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/event_details_location_name"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_location_city"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                android:layout_marginStart="8dp"/>
-        <TextView
-                android:id="@+id/event_details_time"
-                tools:text="20:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_date"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                android:layout_marginEnd="8dp"/>
-        <TextView
-                android:id="@+id/event_details_buyers"
-                android:text="21"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_location_name"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="70dp"/>
-        <TextView
-                android:id="@+id/event_details_sellers"
-                android:text="7"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_time"
+                app:layout_constraintTop_toBottomOf="@+id/textView8">
+
+        </ScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_image"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="70dp"/>
-        <ProgressBar
-                android:id="@+id/event_details_progress_buy"
-                style="?android:attr/progressBarStyle"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
-                app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
-                app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"
-                android:indeterminateTint="@color/primary"/>
-        <ProgressBar
-                android:id="@+id/event_details_progress_sell"
-                style="?android:attr/progressBarStyle"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
-                app:layout_constraintStart_toStartOf="@+id/event_details_sellers"
-                app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
-                android:indeterminateTint="@color/primary"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:id="@+id/constraintLayout2">
+
+            <com.google.android.material.button.MaterialButton
+                    android:id="@+id/event_details_buy"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buy"
+                    app:backgroundTint="@color/buy_sell_tint_selector"
+                    android:textColor="@color/white"
+                    app:strokeColor="@color/white"
+                    app:strokeWidth="1dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
+                    app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
+                    app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"/>
+
+            <com.google.android.material.button.MaterialButton
+                    android:id="@+id/event_details_sell"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sell"
+                    app:backgroundTint="@color/buy_sell_tint_selector"
+                    android:textColor="@color/white"
+                    app:strokeColor="@color/white"
+                    app:strokeWidth="1dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
+                    app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
+                    app:layout_constraintStart_toStartOf="@+id/event_details_sellers"/>
+
+            <ImageView
+                    android:src="@drawable/ic_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/white"
+                    android:id="@+id/imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:text="@{event.location.city}"
+                    tools:text="Wrocław"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/event_details_location_city"
+                    app:layout_constraintStart_toEndOf="@+id/imageView"
+                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp"/>
+            <ImageView
+                    android:src="@drawable/ic_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/white"
+                    android:id="@+id/imageView2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="24dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
+            <TextView
+                    android:id="@+id/event_details_date"
+                    tools:text="01.01.2020"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp"/>
+            <TextView
+                    android:text="@{event.location.name}"
+                    tools:text="Akademia Club"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/event_details_location_name"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_location_city"
+                    app:layout_constraintStart_toEndOf="@+id/imageView"
+                    android:layout_marginStart="8dp"/>
+            <TextView
+                    android:id="@+id/event_details_time"
+                    tools:text="20:00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_date"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:id="@+id/event_details_buyers"
+                    android:text="21"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_location_name"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="70dp"/>
+            <TextView
+                    android:id="@+id/event_details_sellers"
+                    android:text="7"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_time"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="70dp"/>
+            <ProgressBar
+                    android:id="@+id/event_details_progress_buy"
+                    style="?android:attr/progressBarStyle"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
+                    app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
+                    app:layout_constraintEnd_toEndOf="@+id/event_details_buyers"
+                    android:indeterminateTint="@color/primary"/>
+            <ProgressBar
+                    android:id="@+id/event_details_progress_sell"
+                    style="?android:attr/progressBarStyle"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_details_sellers"
+                    app:layout_constraintStart_toStartOf="@+id/event_details_sellers"
+                    app:layout_constraintEnd_toEndOf="@+id/event_details_sellers"
+                    android:indeterminateTint="@color/primary"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
