--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -15,13 +15,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <ProgressBar
+                android:id="@+id/event_details_scrollview_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
 
         <ScrollView
                 android:id="@+id/event_details_scrollview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp">
+                tools:layout_editor_absoluteY="0dp"
+                android:visibility="visible"
+                tools:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -163,7 +175,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="70dp"
                             android:layout_marginTop="24dp"
-                            android:text="21"
                             android:textAlignment="center"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/event_details_location_name" />
@@ -174,7 +185,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="24dp"
                             android:layout_marginEnd="70dp"
-                            android:text="7"
                             android:textAlignment="center"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/event_details_time" />
